# CappyChess0

python_src/: check_buffer.py  eval.py  fsf_integration.py  gui.py  mcts.py  model.py  play_fsf.py  train.py  train_with_fsf.py
rust_engine/: Cargo.toml  lib.rs
rust_engine/src/: bitboard.rs  lib.rs
