[package]
name = "capablanca_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "capablanca_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
ndarray = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
